--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,8 +8,8 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/article_list"
-        android:layout_width="247dp"
-        android:layout_height="303dp"
+        android:layout_width="381dp"
+        android:layout_height="405dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
@@ -30,6 +30,7 @@
         android:layout_height="40dp"
         android:layout_marginBottom="8dp"
         android:layout_marginTop="16dp"
+        android:onClick="getVideos"
         android:text="Search mp4"
         app:layout_constraintBottom_toTopOf="@+id/article_list"
         app:layout_constraintEnd_toEndOf="parent"
